--- a/.github/workflows/shiny-loadtest-ci.yaml
+++ b/.github/workflows/shiny-loadtest-ci.yaml
@@ -30,8 +30,7 @@ jobs:
       - uses: actions/checkout@v2
       #- uses: r-lib/actions/setup-pandoc@v2
       #  with:
-      #    pandoc-version: '2.17.1' # The pandoc version to download (if 
-necessary) and use.
+      #    pandoc-version: '2.17.1' # The pandoc version to download
       - uses: r-lib/actions/setup-r@v2
       - name: Install libcurl
         if: ${{ runner.os == 'Linux'  }}
